# ollama-chain

./: .gitignore  LICENSE  MODELS.md  Makefile  README.md  architecture.excalidraw  gaps.md  pyproject.toml  requirements.txt
.claude/: skills
ollama-chain-vscode-extension/: .gitignore  .vscodeignore  README.md  package.json
ollama-chain-vscode-extension/resources/: webview.js
ollama-chain-vscode-extension/src/: ChatViewProvider.ts  OllamaChainRunner.ts  extension.ts
ollama_chain/: __init__.py  __main__.py  agent.py  chains.py  cli.py  common.py  hackmode.py  image.py  k8s.py  memory.py  metrics.py  models.py  optimizer.py  pcap.py  planner.py  progress.py  router.py  scheduler.py  search.py  server.py  sysinfo.py  telegram.py  tools.py  validation.py
tests/: test_agent.py  test_cascade_errors.py  test_chains_modes.py  test_cli.py  test_code_quality.py  test_common.py  test_image.py  test_k8s.py  test_memory.py  test_metrics.py  test_models.py  test_optimizer.py  test_pcap.py  test_planner.py  test_progress.py  test_router.py  test_scheduler.py  test_search.py  test_server.py  test_tools.py  test_validation.py
